# clspv

./: BUILD.gn
.github/workflows/: generate_artifacts.yml
build_overrides/: clspv.gni  llvm.gni  spirv_tools.gni
cmake/: CMakeLists.txt
lib/: BUILD.gn  SPIRVProducerPass.cpp
test/WorkgroupVariableSize/: local-size.cl  local-size.ll
tools/clspv-opt/: BUILD.gn
tools/driver/: BUILD.gn
tools/reflection/: BUILD.gn
utils/: make_artifact_android_arm64.sh  make_artifact_android_x64.sh  make_artifact_functions.sh  make_artifact_linux_x64.sh  make_artifact_windows_x64.sh
