import("//build_overrides/clspv.gni")
import("//build_overrides/spirv_tools.gni")

executable("clspv-reflection") {
  sources = [
    "ReflectionParser.cpp",
    "main.cpp",
  ]

  include_dirs = [
    "../../include",
    "${spirv_tools_spirv_headers_dir}/include",
    "${root_gen_dir}/${clspv_dir}",
  ]

  configs += clspv_configs_to_append
  configs -= clspv_configs_to_remove

  deps = [
    "${spirv_tools_dir}:spvtools_link",
    "../../:clspv_reflection",
    "../../lib:clspv_core_static",
  ]
}
